update read xlsx

--- a/API_OutlookAutoAPI/test.ipynb
+++ b/API_OutlookAutoAPI/test.ipynb
@@ -36,10 +36,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dataframe = pd.read_excel(\"q2.xlsx\")\n",
+    "text = dataframe[:3].to_string()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1   as\n",
+      "0  2   aa\n",
+      "1  3   22\n",
+      "2  4  sgd\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(text)"
+   ]
   }
  ],
  "metadata": {
